# optexity

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: lint.yml
docs/: AGENTS.md  docs.json  mint.json  package.json
docs/api-reference/: assertion-actions-ref.mdx  automation-schema.mdx  callback.mdx  extraction-actions-ref.mdx  health-endpoints.mdx  inference-endpoint.mdx  interaction-actions-ref.mdx  introduction.mdx  misc-actions-ref.mdx
docs/api-reference/cloud/: AGENTS.md  inference-endpoint.mdx
docs/docs/: agentic-tasks.mdx  best-practices.mdx  control-flow.mdx  core-concepts.mdx  downloads-files.mdx  extra.mdx  getting-started.mdx  installation.mdx  interaction-actions.mdx  quickstart.mdx  timing-retries.mdx
docs/docs/action-types/: agentic-tasks.mdx  assertion-action.mdx  extraction-action.mdx  interaction-action.mdx  python-script-action.mdx  two-factor-auth.mdx
docs/docs/advanced/: best-practices.mdx  callbacks.mdx  downloads-files.mdx  locators.mdx  onepassword.mdx  orchestration.mdx  proxy-setup.mdx  timing-retries.mdx  totp-integration.mdx
docs/docs/building-automations/: action-node.mdx  automation-structure.mdx  for-loop-node.mdx  if-else-node.mdx  inference-api.mdx  local-setup.mdx  locators.mdx  parameters-variables.mdx  parameters.mdx  quickstart.mdx
docs/docs/building_automations/: core-concepts.mdx
docs/docs/faqs/: AGENTS.md  faqs.mdx
docs/docs/getting_started/: running-first-inference.mdx
docs/examples/data_extraction/: i94.mdx
docs/examples/healthcare/: peachstate-medicaid.mdx
docs/examples/qa_testing/: supabase-login.mdx
optexity/: __init__.py  exceptions.py  onepassword_integration.py  test.py
optexity/examples/: add_example.py  download_pdf_url.py  extract_price_stockanalysis.py  file_upload.py  i94.py  i94_travel_history.py  peachstate_medicaid.py  pshpgeorgia_medicaid.py  shien.py  supabase_login.py
optexity/inference/: child_process.py  main.py  run_local.py  worker.py
optexity/inference/core/: logging.py  run_assertion.py  run_automation.py  run_extraction.py  run_interaction.py  run_two_fa.py  run_two_factor_auth.py
optexity/inference/infra/: actual_browser.py  browser.py  browser_extension.py  extension_test.py  utils.py
optexity/inference/models/: __init__.py  gemini.py  llm_model.py
optexity/schema/: automation.py  inference.py  memory.py  task.py
optexity/utils/: settings.py  utils.py
patches/: browser-use.patch
(+25 files in other folders)
