[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optexity"
version = "0.1.0"
readme = "README.md"
description = "Optexity is a platform for building and running browser and computer agents."
authors = [{ name = "Optexity", email = "support@optexity.com" }]
requires-python = ">=3.11"
dependencies = ["pydantic_settings", "pydantic", "playwright", "patchright"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optexity"]
