[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optexity"
version = "0.1.5.2"
readme = "README.md"
description = "Optexity is a platform for building and running browser and computer agents."
authors = [{ name = "Optexity", email = "founders@optexity.com" }]
requires-python = ">=3.11"

dependencies = [
    # core
    "pydantic>=2",
    "pydantic-settings",

    # optexity forked dependency
    "optexity-browser-use>=0.9.5",

    # web / infra
    "fastapi",
    "httpx",
    "aiofiles",
    "async-lru",

    # browser tooling (runtime)
    "playwright",
    "patchright",

    # misc runtime deps
    "tokencost",
    "onepassword-sdk",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
]

[project.scripts]
optexity = "optexity.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["optexity*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88